--- a/myweb/templates/index.html
+++ b/myweb/templates/index.html
@@ -21,7 +21,7 @@
 		  <div class="col-xs-12 col-md-8">
 			  <br/><br/><br/><br/><br/><br/><br/><br/>
 			  <span align="center">
-				  <h3>他天真的以为，在这个世界上他可以找到回家的<a href="#">路</a></h3>
+				  <h3>他天真的以为，在这个世界上他可以找到回家的<a href="/articles/lists">路</a></h3>
 			  </span>
 		  </div>
 		  <div class="col-xs-12 col-md-2">
