--- a/myweb/articles/templates/article_detail.html
+++ b/myweb/articles/templates/article_detail.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="container">
-	<div class="row">
-	  <div class="col-xs-12 col-md-2">
+    <div class="row">
+      <div class="col-xs-12 col-md-2">
 	  </div>
 	  <div class="col-xs-12 col-md-8">
-		{% for a in articles %}
-		  <h3><a href="/articles/detail/{{a.id}}">{{a.title}}</a></h3>
-		{% endfor %}
+	    <h3>{{article.title}}</h3>
+		<h4>Writer:{{article.author}}</h4>
+		<p>{{article.content}}</p>
 	  </div>
 	  <div class="col-xs-12 col-md-2">
 	  </div>
-    </div>
+	</div>
   </div>
 {% endblock %}
