--- a/myweb/articles/templates/articles_list_all.html
+++ b/myweb/articles/templates/articles_list_all.html
@@ -1,39 +1,16 @@
-<html>
-	<head>
-		<meta charset="utf-8"/>
-		<title>追风筝的Who</title>
-		<link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
-	</head>
-	<body>
-     <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="">追风筝的Who</a>
-        </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#">C</a></li>
-        <li><a href="#">Python</a></li>
-		<li><a href="#">Linux</a></li>
-		<li><a href="#">书剑恩仇录</a></li>
-      </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Python">
-        </div>
-        <button type="submit" class="btn btn-default">Search</button>
-      </form>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-	</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+  <div class="container">
+	<div class="row">
+	  <div class="col-xs-12 col-md-2">
+	  </div>
+	  <div class="col-xs-12 col-md-8">
+		{% for a in articles %}
+		 <h4><a href="/articles/detail/{{a.id}}">{{a.title}}</a></h4>
+		{% endfor%}
+	  </div>
+	  <div class="col-xs-12 col-md-2">
+	  </div>
+	</div>
+  </div>
+{% endblock %}
