--- a/myweb/articles/templates/article_detail.html
+++ b/myweb/articles/templates/article_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load custom_markdown %}
 {% block content %}
   <div class="container">
     <div class="row">
@@ -7,7 +8,7 @@
 	  <div class="col-xs-12 col-md-8">
 	    <h3>{{article.title}}</h3>
 		<h4>Writer:{{article.author}}</h4>
-		<p>{{article.content}}</p>
+		<p>{{article.content|custom_markdown}}</p>
 	  </div>
 	  <div class="col-xs-12 col-md-2">
 	  </div>
