--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -3,6 +3,9 @@
 		<meta charset="utf-8"/>
 		<title>追风筝的Who</title>
 		<link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+		<script src="/static/highlight/highlight.pack.js"></script>
+		<link rel="stylesheet" href="/static/highlight/styles/monokai.css">
+		<script>hljs.initHighlightingOnLoad();</script>
 	</head>
 	<body>
      <nav class="navbar navbar-inverse">
