增加线上部署相关以及界面美化

--- a/myweb/articles/templates/articles_list.html
+++ b/myweb/articles/templates/articles_list.html
@@ -10,6 +10,11 @@
 		{% endfor %}
 	  </div>
 	  <div class="col-xs-12 col-md-2">
+		  <img src="/static/img/avator/haha.jpg/" width="160" height="126">
+		  <br/><br/>
+		  <center><a href="https://github.com/adamwinwho">Github</a></center>
+		  <center><a href="http://stackoverflow.com/">StackOverFlow</a></center>
+		  <center><a href="http://freelycode.com">Python</a></center>
 	  </div>
     </div>
   </div>
