--- a/myweb/articles/templates/article_detail.html
+++ b/myweb/articles/templates/article_detail.html
@@ -7,7 +7,7 @@
 	  </div>
 	  <div class="col-xs-12 col-md-8">
 	    <h3>{{article.title}}</h3>
-		<h4>Writer:{{article.author}}</h4>
+		<h4>author:{{article.author}}</h4>
 		<p>{{article.content|custom_markdown}}</p>
 	  </div>
 	  <div class="col-xs-12 col-md-2">
