--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -35,7 +35,7 @@
         <button type="submit" class="btn btn-default">Search</button>
       </form>
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="#">注册/登陆</a></li>
+		<li><a href="/register">注册/登陆</a></li>
 	  </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
