--- a/myweb/templates/base.html
+++ b/myweb/templates/base.html
@@ -35,7 +35,13 @@
         <button type="submit" class="btn btn-default">Search</button>
       </form>
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="/register">注册/登陆</a></li>
+		{% if user.is_authenticated %}
+		<li>
+			<a href="/accounts/logout"><strong>{{user.username}}</strong>/登出</a>
+		</li>
+		{% else %}
+		  <li><a href="/register">注册/登陆</a></li>
+		{% endif %}
 	  </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
