--- a/myweb/templates/registration/login.html
+++ b/myweb/templates/registration/login.html
@@ -4,11 +4,23 @@
 </div>
 <div class="col-sm-12 col-md-6">
 <br/><br/><br/><br/><br/><br/>
-{% if error %}
-  <div class="alert alert-warning" role="alert">{{error}}</div>
+{% if form.non_field_errors %}
+  {% for error in form.non_field_errors %}
+    <div class="alert alert-danger">{{error}}</div>
+  {% endfor %}
+{% endif %}
+{% if form.username.errors %}
+  {% for error in form.username.errors %}
+    <div class="alert alert-danger">用户名:{{error}}</div>
+  {% endfor %}
+{% endif %}
+{% if form.password.errors %}
+  {% for error in form.password.errors %}
+    <div class="alert alert-danger">密码:{{error}}</div>
+  {% endfor %}
 {% endif %}
 <div class="panel panel-default">
-  <div class="panel-heading">用户注册</div>
+  <div class="panel-heading">用户登陆</div>
   <div class="panel-body">
 	  <form class="form-horizontal" role="form" method="POST">{% csrf_token %}
   <div class="form-group">
@@ -20,26 +32,14 @@
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
     <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="密码"  name="passwd">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">重输密码</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="密码" name="re_passwd">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">注册邮箱</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="邮箱" name="email">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="密码" name="password">
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-		<button type="submit" class="btn btn-default">注册</button>
+		<button type="submit" class="btn btn-default">登陆</button>
 		&nbsp;&nbsp;&nbsp;
-		<span><a href="/accounts/login">已有帐号,现在登陆?</a></span>
+		<span><a href="/register">没有帐号,现在去注册?</a></span>
     </div>
   </div>
   </form> </div>
